--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,15 +6,19 @@
   text-align: center;
   border: 0;
   border-radius: 5px;
+  transition: all 0.2s;
   font-size: 14px;
 }
 
 .primary{
   color: var(--white);
   background-color: var(--primary);
-  transition: all 0.2s;
+
   &:hover{
     background-color: var(--primary-hover);
+  }
+  svg {
+    fill: var(--white);
   }
 }
 
@@ -24,5 +28,23 @@
   border: 1px solid var(--gray-light);
   &:hover{
     background-color: var(--primary-hover);
+    color:var(--white);
+    svg {
+      fill: var(--white);
+    }
   }
+}
+
+.arrow{
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.down{
+  transform: rotate(90deg);
+  transition: all 0.2s ease-in;
+}
+
+.right {
+
 }
