--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,29 +1,30 @@
 html,
 body {
-	margin: 0;
-	padding: 0;
-	color: var(--black);
-	background: #F5F6F8;
-	font-family: "Noto Sans KR", sans-serif;
+    margin: 0;
+    padding: 0;
+    color: var(--black);
+    background: #F5F6F8;
+    font-family: "Noto Sans KR", sans-serif;
 }
 
 a {
-	text-decoration: none;
-	color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 :root {
-	--black: #3B434E;
-	--gray-light: #EBEBEB;
-	--white: white;
-	--primary: #7653FC;
-	--primary-hover: #542bf6;
-	--red: #FC836D;
-	--green: #1DC37E;
-	--green-light: #C8F8E4;
-	--font-family: "Noto Sans", sans-serif;
+    --black: #3B434E;
+    --gray-light: #EBEBEB;
+    --white: white;
+    --primary: #7653FC;
+    --primary-hover: #542bf6;
+    --red: #FC836D;
+    --green: #1DC37E;
+    --green-light: #C8F8E4;
+    --font-family: "Noto Sans", sans-serif;
+    --text: #3B434E;
 }
