--- a/src/components/Rating/Rating.module.scss
+++ b/src/components/Rating/Rating.module.scss
@@ -1,9 +1,26 @@
+
+
 .star{
-  cursor: pointer;
-  margin-right: 5px;
+  box-sizing: border-box;
+  padding-right: 5px;
+  display: inline-block;
+
 }
 
 .filled{
-  fill:var(--primary);
+  svg{
+    fill:var(--primary);
+  }
+
 }
 
+.iconContainer{
+  padding-right: 5px;
+}
+
+.editable{
+
+    cursor: pointer;
+
+
+}
