--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: minmax(320px, 1fr);
   grid-template-rows: auto 1fr auto;
+  gap: 0 30px;
   min-height: 100vh;
   grid-template-areas:
     "header"
@@ -36,6 +37,3 @@
   grid-area: body;
 }
 
-.footer {
-  grid-area: footer;
-}
